--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,12 +12,12 @@
             android:id="@+id/message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:text="@string/title_home"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toStartOf="@+id/tokyo"
+            android:layout_marginEnd="8dp"/>
 
     <android.support.design.widget.BottomNavigationView
             android:id="@+id/navigation"
@@ -30,5 +30,40 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:menu="@menu/navigation"/>
+    <com.google.android.gms.maps.MapView
+            android:layout_width="385dp"
+            android:layout_height="369dp"
+            android:id="@+id/mapView" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/navigation"/>
+    <Button
+            android:text="Tokyo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tokyo"
+            app:layout_constraintEnd_toStartOf="@+id/button4" android:layout_marginEnd="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/message" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"/>
+    <Button
+            android:text="Paris"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/paris" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tokyo"
+            app:layout_constraintEnd_toStartOf="@+id/button4" android:layout_marginEnd="8dp"/>
+    <Button
+            android:text="London"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/london" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/paris"
+            app:layout_constraintEnd_toStartOf="@+id/button4" android:layout_marginEnd="8dp"/>
+    <Button
+            android:text="Random"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button4" android:layout_marginEnd="115dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tokyo"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/london"/>
 
 </android.support.constraint.ConstraintLayout>
