--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,14 +10,12 @@
 
     <TextView
             android:id="@+id/message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_width="362dp"
+            android:layout_height="31dp"
             android:text="@string/title_home"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toStartOf="@+id/tokyo"
-            android:layout_marginEnd="8dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
 
     <android.support.design.widget.BottomNavigationView
             android:id="@+id/navigation"
@@ -30,40 +28,44 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:menu="@menu/navigation"/>
-    <com.google.android.gms.maps.MapView
-            android:layout_width="385dp"
-            android:layout_height="369dp"
-            android:id="@+id/mapView" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/navigation"/>
     <Button
             android:text="Tokyo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tokyo"
-            app:layout_constraintEnd_toStartOf="@+id/button4" android:layout_marginEnd="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/message" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/message"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
     <Button
             android:text="Paris"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/paris" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tokyo"
-            app:layout_constraintEnd_toStartOf="@+id/button4" android:layout_marginEnd="8dp"/>
+            android:id="@+id/paris"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/message"
+            app:layout_constraintStart_toEndOf="@+id/tokyo" android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/london" android:layout_marginEnd="8dp"/>
     <Button
             android:text="London"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/london" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/paris"
-            app:layout_constraintEnd_toStartOf="@+id/button4" android:layout_marginEnd="8dp"/>
-    <Button
-            android:text="Random"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/button4" android:layout_marginEnd="115dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tokyo"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/london"/>
+            android:id="@+id/london"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/message"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:orientation="vertical"
+                  android:layout_width="fill_parent"
+                  android:layout_height="451dp"
+                  android:layout_marginBottom="8dp"
+                  app:layout_constraintBottom_toTopOf="@+id/navigation" app:layout_constraintStart_toStartOf="parent"
+                  android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                  android:layout_marginEnd="8dp" android:id="@+id/linearLayout">
+        <org.osmdroid.views.MapView android:id="@+id/worldmap"
+                                    android:layout_width="fill_parent"
+                                    android:layout_height="fill_parent" android:visibility="visible"/>
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
