--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,26 +34,50 @@
             android:layout_height="wrap_content"
             android:id="@+id/tokyo"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/message"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/paris"
+            app:layout_constraintTop_toBottomOf="@+id/message"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
     <Button
             android:text="Paris"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/paris"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/message"
-            app:layout_constraintStart_toEndOf="@+id/tokyo" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/london" android:layout_marginEnd="8dp"/>
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+            app:layout_constraintTop_toBottomOf="@+id/message"
+            app:layout_constraintEnd_toStartOf="@+id/london"/>
     <Button
             android:text="London"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/london"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/message"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/message"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+            app:layout_constraintEnd_toStartOf="@+id/mirror"/>
+    <Button
+            android:text="Mirror"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/mirror"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="12dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/message"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
+
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   android:orientation="vertical"
@@ -67,5 +91,6 @@
                                     android:layout_width="fill_parent"
                                     android:layout_height="fill_parent" android:visibility="visible"/>
     </LinearLayout>
+
 
 </android.support.constraint.ConstraintLayout>
