--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,22 +37,18 @@
             android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginStart="12dp"
-            android:layout_marginBottom="8dp"
             app:layout_constraintEnd_toStartOf="@+id/paris"
             app:layout_constraintTop_toBottomOf="@+id/message"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
+            app:layout_constraintBottom_toBottomOf="@+id/message"/>
     <Button
             android:text="Paris"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/paris"
             android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+            app:layout_constraintEnd_toStartOf="@+id/london"
             app:layout_constraintTop_toBottomOf="@+id/message"
-            app:layout_constraintEnd_toStartOf="@+id/london"/>
+            app:layout_constraintBottom_toBottomOf="@+id/message"/>
     <Button
             android:text="London"
             android:layout_width="wrap_content"
@@ -60,11 +56,8 @@
             android:id="@+id/london"
             android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
             app:layout_constraintTop_toBottomOf="@+id/message"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-            app:layout_constraintEnd_toStartOf="@+id/mirror"/>
+            app:layout_constraintEnd_toStartOf="@+id/mirror" app:layout_constraintBottom_toBottomOf="@+id/message"/>
     <Button
             android:text="Mirror"
             android:layout_width="wrap_content"
@@ -73,23 +66,21 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="12dp"
             android:layout_marginTop="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
             app:layout_constraintTop_toBottomOf="@+id/message"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
+            app:layout_constraintBottom_toBottomOf="@+id/message"/>
 
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   android:orientation="vertical"
                   android:layout_width="fill_parent"
-                  android:layout_height="451dp"
+                  android:layout_height="0dp"
                   android:layout_marginBottom="8dp"
                   app:layout_constraintBottom_toTopOf="@+id/navigation" app:layout_constraintStart_toStartOf="parent"
                   android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                   android:layout_marginEnd="8dp" android:id="@+id/linearLayout">
         <org.osmdroid.views.MapView android:id="@+id/worldmap"
                                     android:layout_width="fill_parent"
-                                    android:layout_height="fill_parent" android:visibility="visible"/>
+                                    android:visibility="visible" android:layout_height="fill_parent"/>
     </LinearLayout>
 
 
