--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,35 +9,15 @@
         tools:context=".MainActivity">
 
 
-    <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:orientation="vertical"
+    <include
+            layout="@layout/worldmaps"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-        <org.osmdroid.views.MapView
-                android:id="@+id/worldmap0"
-                android:layout_width="fill_parent"
-                android:layout_height="0px"
-                android:layout_weight="1"
-                android:visibility="visible">
-
-        </org.osmdroid.views.MapView>
-
-        <org.osmdroid.views.MapView
-                android:id="@+id/worldmap1"
-                android:layout_width="fill_parent"
-                android:layout_height="0px"
-                android:layout_weight="1"
-                android:visibility="visible" />
-
-    </LinearLayout>
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
     <LinearLayout
             android:layout_width="match_parent"
