--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,10 +23,10 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-        <include
-                layout="@layout/quicklocations"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+<!--        <include-->
+<!--                layout="@layout/quicklocations"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content" />-->
 
         <TextView
                 android:id="@+id/message0"
